--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -7,7 +7,6 @@
   "license": "ASL",
   "dependencies": {
     "express": "4.x",
-    "html-errors": "latest",
-    "http-error": "latest"
+    "html-errors": "latest"
   }
 }
